<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NaszeSąsiedztwo</string>
    <string name="home">Główna</string>
    <string name="profile">Profil</string>
    <string name="notifications">Powiadomienia</string>
    <string name="listings">Zadania</string>
    <string name="add">Dodaj</string>
    <string name="welcome">Witaj,\ </string>
    <string name="login">Logowanie</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="password">Hasło</string>
    <string name="user">Użytkownik</string>

    <string name="sign_up">Zarejestruj się</string>
    <string name="title_activity_listing_details">ListingDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="region">Region</string>
    <string name="center">Wyśrodkuj mapę</string>
    <string name="accept">Przyjmuję</string>
    <string name="cancel">Anuluj</string>
    <string name="created_by">Utworzono przez:</string>
    <string name="registration">Rejestracja</string>
    <string name="description">Opis</string>
    <string name="nick">Nick</string>
    <string name="last_name">Nazwisko</string>
    <string name="first_name">Imię</string>
    <string name="new_listing" tools:ignore="Typos">Nowe ogłoszenie</string>
    <string name="title">Tytuł</string>
    <string-array name="regions">
        <item>Dolnośląskie</item>
        <item>Kujawsko-Pomorskie</item>
        <item>Lubelskie</item>
        <item>Lubuskie</item>
        <item>Łódzkie</item>
        <item>Małopolskie</item>
        <item>Mazowieckie</item>
        <item>Opolskie</item>
        <item>Podkarpackie</item>
        <item>Podlaskie</item>
        <item>Pomorskie</item>
        <item>Śląskie</item>
        <item>Świętokrzyskie</item>
        <item>Warmińsko-Mazurskie</item>
        <item>Wielkopolskie</item>
        <item>Zachodnio-Pomorskie</item>
    </string-array>
</resources>