<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    tools:ignore="TextContrastCheck">

    <EditText
        android:id="@+id/firstname_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <EditText
        android:id="@+id/lastname_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/firstname_input"
        app:layout_constraintStart_toStartOf="@+id/firstname_input"
        app:layout_constraintTop_toBottomOf="@+id/firstname_input"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/nick_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nick"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/lastname_input"
        app:layout_constraintStart_toStartOf="@+id/lastname_input"
        app:layout_constraintTop_toBottomOf="@+id/lastname_input"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/description_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|none|textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="@+id/nick_input"
        app:layout_constraintStart_toStartOf="@+id/nick_input"
        app:layout_constraintTop_toBottomOf="@+id/register_password_input"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="none|textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/nick_input"
        app:layout_constraintStart_toStartOf="@+id/nick_input"
        app:layout_constraintTop_toBottomOf="@+id/nick_input"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/registration"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:onClick="onRegisterClicked"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/register_error_msg"
        app:layout_constraintEnd_toEndOf="@+id/description_input"
        app:layout_constraintStart_toStartOf="@+id/description_input" />

    <TextView
        android:id="@+id/register_error_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        tools:text="cos sie wysypało" />
</androidx.constraintlayout.widget.ConstraintLayout>