<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewListingActivity">

    <TextView
        android:id="@+id/newlisting_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:text="@string/new_listing"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/newlisting_title"
        app:layout_constraintStart_toStartOf="@+id/newlisting_title"
        app:layout_constraintTop_toBottomOf="@+id/newlisting_title"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/newlisting_description_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="none|textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/region_tv"
        app:layout_constraintEnd_toEndOf="@+id/title_input"
        app:layout_constraintStart_toStartOf="@+id/title_input"
        app:layout_constraintTop_toBottomOf="@+id/title_input"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/newlisting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/newlisting_error_msg"
        app:layout_constraintEnd_toEndOf="@+id/newlisting_description_input"
        app:layout_constraintStart_toStartOf="@+id/newlisting_description_input" />

    <TextView
        android:id="@+id/newlisting_error_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="cos sie rozpieprzyło" />

    <TextView
        android:id="@+id/region_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/coords_tv"
        app:layout_constraintStart_toStartOf="@+id/newlisting_description_input"
        tools:text="Region: ..." />

    <TextView
        android:id="@+id/coords_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/newlisting_button"
        app:layout_constraintStart_toStartOf="@+id/region_tv"
        tools:text="Lokalizacja: ..." />
</androidx.constraintlayout.widget.ConstraintLayout>